service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: breakfast-rocks
  name: breakfast-rocks
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    name: breakfast-rocks
  type: NodePort
